--- a/src/MVCBlog.Website/App_GlobalResources/SiteMapLocalizations.resx
+++ b/src/MVCBlog.Website/App_GlobalResources/SiteMapLocalizations.resx
@@ -141,6 +141,12 @@
   <data name="Blog_Index" xml:space="preserve">
     <value>Blog</value>
   </data>
+  <data name="Rovian_Index" xml:space="preserve">
+    <value>Rovian</value>
+  </data>
+  <data name="Murilo_Index" xml:space="preserve">
+    <value>Murilo</value>
+  </data>
   <data name="Error_NotFound" xml:space="preserve">
     <value>404-Error</value>
   </data>
